--- a/template.yaml
+++ b/template.yaml
@@ -1,85 +1,64 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Transform: AWS::Serverless-2016-10-31
+Transform: 'AWS::Serverless-2016-10-31'
+Description: 'Serverless Image Management Application'
+
+Globals:
+  Function:
+    Timeout: 60
 
 Resources:
-
-  ImageBucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      BucketName: your-image-bucket
-
   ListImagesFunction:
-    Type: AWS::Serverless::Function
+    Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: list_images.lambda_handler
+      Handler: image_management.app.list_images
       Runtime: python3.9
-      CodeUri: src/
+      CodeUri: image_management/
       MemorySize: 128
-      Timeout: 10
       Environment:
         Variables:
           BUCKET_NAME: !Ref ImageBucket
       Events:
-        ListImagesApi:
+        Api:
           Type: Api
           Properties:
             Path: /images
-            Method: get
+            Method: GET
 
   ThumbnailGeneratorFunction:
-    Type: AWS::Serverless::Function
+    Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: generate_thumbnail.lambda_handler
+      Handler: image_management.app.generate_thumbnail
       Runtime: python3.9
-      CodeUri: src/
+      CodeUri: image_management/
       MemorySize: 128
-      Timeout: 10
       Environment:
         Variables:
-          THUMBNAIL_BUCKET: !Ref ImageBucket
+          BUCKET_NAME: !Ref ImageBucket
       Events:
-        ImageUpload:
+        S3Event:
           Type: S3
           Properties:
             Bucket: !Ref ImageBucket
             Events: s3:ObjectCreated:*
-            Filter:
-              S3Key:
-                Rules:
-                  - Name: suffix
-                    Value: .jpg
 
   RenameImageFunction:
-    Type: AWS::Serverless::Function
+    Type: 'AWS::Serverless::Function'
     Properties:
-      Handler: rename_image.lambda_handler
+      Handler: image_management.app.rename_image
       Runtime: python3.9
-      CodeUri: src/
+      CodeUri: image_management/
       MemorySize: 128
-      Timeout: 10
       Environment:
         Variables:
           BUCKET_NAME: !Ref ImageBucket
       Events:
-        RenameImageApi:
+        Api:
           Type: Api
           Properties:
             Path: /images/rename
-            Method: post
+            Method: POST
 
-Outputs:
-  ImageBucketName:
-    Description: "S3 bucket name where images are uploaded"
-    Value: !Ref ImageBucket
-
-  ListImagesFunctionName:
-    Description: "Lambda function to list images"
-    Value: !Ref ListImagesFunction
-
-  ThumbnailGeneratorFunctionName:
-    Description: "Lambda function to generate thumbnails"
-    Value: !Ref ThumbnailGeneratorFunction
-
-  RenameImageFunctionName:
-    Description: "Lambda function to rename images"
-    Value: !Ref RenameImageFunction
+  ImageBucket:
+    Type: 'AWS::S3::Bucket'
+    Properties:
+      BucketName: your-image-bucket-name
