update ImageBucketName for SAM template

--- a/template.yaml
+++ b/template.yaml
@@ -61,4 +61,4 @@ Resources:
   ImageBucket:
     Type: 'AWS::S3::Bucket'
     Properties:
-      BucketName: your-image-bucket-name
+      BucketName: awsserverlesstestappimages
