--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Package SAM application
       run: |
-        sam package --s3-bucket ${{ secrets.S3_BUCKET_NAME }} --region ${{ secrets.S3_REGION}} --output-template-file packaged.yaml
+        sam package --s3-bucket ${{ secrets.S3_BUCKET_NAME }} --region ${{ secrets.AWS_REGION}} --output-template-file packaged.yaml
 
     - name: Deploy SAM application
       run: |
